--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -38,3 +38,16 @@ html {
 	font-size: 12px;
   color: #fff;
 }
+
+.compose-btn {
+  position: fixed;
+  right: 50px;
+  bottom: 65px;
+  color: white;
+  background-color:#1abc9c;
+  border-radius:100%;
+  height:4rem;
+  width:4rem;
+  border:none;
+  font-size:2rem;
+}
